Onboarding: Fix welcome message appearing off screen (#1650)
* Onboarding: Prevent welcome message having a negative translateY value

* Ignore stylelint error

* Position: fixed

---------

--- a/special-pages/pages/onboarding/app/components/v3/Hiker.module.css
+++ b/special-pages/pages/onboarding/app/components/v3/Hiker.module.css
@@ -1,6 +1,6 @@
 .hiker {
     bottom: 0;
-    position: absolute;
+    position: fixed;
     right: var(--sp-35);
 
     animation-name: hiker-appear;
